@@ -57,23 +57,6 @@ if test -n "$x_libraries"; then
     X_LIBS="-L$x_libraries"
 fi
 
-# You'd think something standard like X11 would come with standard libraries!
-AC_CHECKING(for specific X-Windows libraries we might need)
-# add Xmu library if we have it
-for xfile in $x_libraries/libXmu.*; do
-    if (test -r $xfile); then
-        WIDGET_LIBS="${WIDGET_LIBS} -lXmu"
-        break
-    fi
-done
-# add Xext library if we have it
-for xfile in $x_libraries/libXext.*; do
-    if (test -r $xfile); then
-        WIDGET_LIBS="${WIDGET_LIBS} -lXext"
-        break
-    fi
-done
-
 AC_SUBST(X_INCLUDE)
 AC_SUBST(X_LIBS)
 
